<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple File Manager</string>
    <string name="app_launcher_name">File Manager</string>
    <string name="share_via">Share via</string>
    <string name="no_permissions">We need the permission to access your storage</string>
    <string name="no_app_found">No app for opening this type of files is available</string>
    <string name="create_new">Create new item</string>
    <string name="rename_item">Rename item</string>
    <string name="directory">Directory</string>
    <string name="file">File</string>
    <string name="name_taken">Directory or file with that name already exists</string>
    <string name="invalid_name">The name contains invalid characters</string>
    <string name="empty_name">Please enter a name</string>
    <string name="error_occurred">An unknown error occurred</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="undo">Undo</string>
    <string name="rename">Rename</string>
    <string name="properties">Properties</string>
    <string name="copy">Copy</string>
    <string name="copy_move">Copy/Move</string>
    <string name="share">Share</string>
    <string name="shared_files">Files shared via Simple File Manager</string>
    <string name="no_files_selected">No files selected</string>
    <string name="copy_item">Copy item</string>
    <string name="copy_items">Copy items</string>
    <string name="move">Move</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="select_destination">Select destination</string>
    <string name="invalid_destination">Could not write to the selected destination</string>
    <string name="please_select_destination">Please select a destination</string>
    <string name="source_and_destination_same">Source and destination cannot be the same</string>
    <string name="copying">Copying</string>
    <string name="copying_success">Files copied successfully</string>
    <string name="copy_move_failed">An error occurred</string>
    <string name="moving">Moving</string>
    <string name="moving_success">Files moved successfully</string>
    <string name="already_exists">A file with that name already exists</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="moving_success_partial">Some files could not be moved</string>
    <string name="copying_success_partial">Some files could not be copied</string>

    <plurals name="items_deleted">
        <item quantity="one">1 item deleted</item>
        <item quantity="other">%1$d items deleted</item>
    </plurals>

    <plurals name="items">
        <item quantity="one">1 item</item>
        <item quantity="other">%1$d items</item>
    </plurals>

    <!-- Favorites -->
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="website">More simple apps and source code at:\nhttp://simplemobiletools.com</string>
    <string name="email_label">Send your feedback or suggestions to:</string>
    <string name="email" translatable="false">hello@simplemobiletools.com</string>
    <string name="third_party_licences_underlined"><u>Third party licences</u></string>
    <string name="invite_friends_underlined"><u>Invite friends</u></string>
    <string name="share_text">Hey, come check out %1$s at %2$s</string>
    <string name="invite_via">Invite via</string>
    <string name="rate_us_underlined"><u>Rate us in the Play Store</u></string>
    <string name="follow_us">Follow us:</string>
    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="show_hidden">Show hidden files and directories</string>

    <!-- License -->
    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
    <string name="third_party_licences">Third party licences</string>
    <string name="kotlin_title"><u>Kotlin (programming language)</u></string>
    <string name="kotlin_text" translatable="false">Copyright 2010 - 2016 JetBrains s.r.o.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="kotlin_url" translatable="false">https://github.com/JetBrains/kotlin</string>
    <string name="multiselect_title"><u>RecyclerView MultiSelect (selecting multiple list items)</u></string>
    <string name="multiselect_text" translatable="false">The MIT License (MIT)\n\nCopyright (c) 2014 Big Nerd Ranch\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="multiselect_url" translatable="false">https://github.com/bignerdranch/recyclerview-multiselect</string>
    <string name="filepicker_title"><u>Simple File Picker (filepicker dialog)</u></string>
    <string name="filepicker_text" translatable="false">Copyright 2016 SimpleMobileTools\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="filepicker_url" translatable="false">https://github.com/SimpleMobileTools/Simple-File-Picker</string>
    <string name="fileproperties_title"><u>Simple File Properties (properties dialog)</u></string>
    <string name="fileproperties_text" translatable="false">Copyright 2016 SimpleMobileTools\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="fileproperties_url" translatable="false">https://github.com/SimpleMobileTools/Simple-File-Properties</string>

    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
    <!-- Short description has to have less than 80 chars -->
    <string name="app_short_description">A simple file manager for browsing and editing files and directories.</string>
    <string name="app_long_description">
        Can also be used for browsing root files and SDcard content. You can easily rename, copy, move, delete and share anything you wish.


        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.

        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
    </string>

    <!--
        Haven't found some strings? There's more at
        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/library/src/main/res
        https://github.com/SimpleMobileTools/Simple-File-Picker/tree/master/library/src/main/res
        https://github.com/SimpleMobileTools/Simple-File-Properties/tree/master/library/src/main/res
    -->
</resources>
