<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cab_info"
        android:icon="@mipmap/info"
        android:title="@string/info"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_rename"
        android:icon="@mipmap/edit"
        android:title="@string/rename"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_share"
        android:icon="@mipmap/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_copy"
        android:icon="@mipmap/copy"
        android:title="@string/copy_move"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_delete"
        android:icon="@mipmap/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>
