<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/dialog_holder"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_margin"
              android:paddingRight="@dimen/activity_margin"
              android:paddingTop="@dimen/activity_margin">

    <TextView
        android:id="@+id/source_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source"
        android:textSize="@dimen/details_text_size"/>

    <TextView
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:text="source"/>

    <TextView
        android:id="@+id/destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textSize="@dimen/details_text_size"/>

    <TextView
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:paddingBottom="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:text="@string/select_destination"/>

    <RadioGroup
        android:id="@+id/dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/dialog_radio_copy">

        <RadioButton
            android:id="@+id/dialog_radio_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/copy"/>

        <RadioButton
            android:id="@+id/dialog_radio_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move"/>
    </RadioGroup>
</LinearLayout>
